# mellu-proto

./: CMakeLists.txt  README  README.md  TODO
cmake/: FindSqlite3.cmake
data/maps/: proto-evt.map
src/: .Renderer.cpp.swp  AloitusRuutu.h  AnimatedPlayer.cpp  AnimatedPlayer.h  Animation.cpp  Animation.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Database.cpp  Database.h  Decoration.cpp  Decoration.h  DecorationFile.cpp  DecorationFile.h  DropGraphicsComponent.cpp  DropGraphicsComponent.h  DropInputComponent.cpp  DropInputComponent.h  DropPhysicsComponent.cpp  DropPhysicsComponent.h  Droppin.cpp  Droppin.h  EditInput.cpp  EditInput.h  EditText.cpp  EditText.h  Event.h  EventFile.cpp  EventFile.h  EventObject.cpp  EventObject.h  EventTable.cpp  EventTable.h  Events.cpp  Events.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  (+38 more)
src/events/: CMakeLists.txt  Platform.cpp  Platform.h
tests/: database-test.cpp  database-test.db
